--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start dist/server.js",
-    "npminstall": "npm install && npm install --prefix",
+    "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
