--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start dist/server.js",
-    "npminstall": "npm install && npm install --prefix",
+    "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
@@ -39,6 +39,7 @@
     "express-jwt": "^5.3.1",
     "extend": "^3.0.1",
     "file-base64": "^1.0.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
     "mkdirp": "^0.5.1",
@@ -51,7 +52,8 @@
     "path": "^0.12.7",
     "rotating-file-stream": "^1.3.6",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4"
+    "winston-daily-rotate-file": "^3.1.4",
+    "with-context": "0.0.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
