--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-jwt": "^5.3.1",
     "extend": "^3.0.1",
     "file-base64": "^1.0.0",
+    "hijri-date": "^0.2.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
@@ -50,6 +51,9 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "rc-calendar": "^9.6.1",
+    "rc-time-picker": "^3.3.1",
+    "react-number-format": "^3.3.4",
     "rotating-file-stream": "^1.3.6",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
