--- a/package.json
+++ b/package.json
@@ -4,17 +4,16 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "server":
-      "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/server.js --presets es2015,stage-0\"",
+    "server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/server.js --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "client": "npm run start --prefix client",
+    "runapi": "npm run server",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start dist/server.js",
     "npminstall": "npm install && npm install --prefix",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
-    "test":
-      "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
+    "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -32,6 +31,7 @@
   "author": "ALGAEH Technologies Pvt Ltd",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.247.1",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
@@ -46,7 +46,9 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
+    "node-linq": "0.0.5",
     "node-string-pad": "0.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
