--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rc-time-picker": "^3.3.1",
     "react-number-format": "^3.3.4",
     "rotating-file-stream": "^1.3.6",
+    "sweetalert": "^2.1.0",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
     "with-context": "0.0.3"
