--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-data-grid": "^4.0.7",
+    "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-redux": "^5.0.7",
