--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "extend": "^3.0.1",
     "file-base64": "^1.0.0",
     "hijri-date": "^0.2.2",
+    "jQuery": "^1.7.4",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
