--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "morgan": "^1.9.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
-    "node-linq": "0.0.5",
     "node-string-pad": "0.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -59,6 +58,7 @@
     "react-number-format": "^3.3.4",
     "rotating-file-stream": "^1.3.6",
     "sweetalert": "^2.1.0",
+    "underscore": "^1.9.1",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
     "with-context": "0.0.3"
