--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "chart.js": "^2.7.2",
     "cross-env": "^5.1.4",
     "jade": "~1.11.0",
+    "linq": "^3.1.0",
     "load-json-file": "^5.0.0",
     "material-ui": "^1.0.0-beta.43",
     "moment": "^2.22.1",
