--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "node-linq": "0.0.5",
+    "node-model-validation": "^1.0.1",
     "node-string-pad": "0.0.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
