--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -1,5 +1,5 @@
 {
-  "baseUrl": "http://192.168.0.149:3000/api/v1",
+  "baseUrl": "/api/v1",
   "apiAuth": {
     "user": "devteam",
     "password": "devteam"
