--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,14 @@
     "jade": "~1.11.0",
     "linq": "^3.1.0",
     "load-json-file": "^5.0.0",
+    "lokijs": "^1.5.5",
     "moment": "^2.22.1",
     "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-data-grid": "^4.0.7",
-    "react-day-picker": "^7.1.9",
+    "react-date-picker": "^6.10.4",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-modal": "^3.4.5",
