--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-date-picker": "^6.11.2",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
+    "react-event-timeline": "^1.5.4",
     "react-modal": "^3.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
