--- a/client/package.json
+++ b/client/package.json
@@ -42,5 +42,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "eslintConfig": {
+    "rules": {
+      "no-eval": 0
+    }
+  },
   "proxy": "http://localhost:3000"
 }
