--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dropzone": "^4.2.9",
     "react-event-timeline": "^1.5.4",
     "react-modal": "^3.4.5",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
