--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.247.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
