--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
+    "cryptr": "^4.0.0",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
