--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
     "cross-env": "^5.1.4",
+    "idb": "^2.1.3",
     "jade": "~1.11.0",
     "linq": "^3.1.0",
     "load-json-file": "^5.0.0",
