--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-event-timeline": "^1.5.4",
+    "react-froala-wysiwyg": "^2.8.4",
     "react-modal": "^3.4.5",
+    "react-quill": "^1.3.1",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
