--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,8 @@
     "react-select": "^1.2.1",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-number-format": "^3.3.4"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
