--- a/client/package.json
+++ b/client/package.json
@@ -30,10 +30,12 @@
     "react-quill": "^1.3.1",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^5.0.7",
+    "react-render-html": "^0.6.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
+    "react-to-print": "^2.0.0-alpha-2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0"
