--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
     "lokijs": "^1.5.5",
+    "mathjs": "^5.1.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
