--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
+    "axios-cancel": "^0.2.2",
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
     "cross-env": "^5.1.4",
