--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "react-select": "^1.2.1",
+    "react-table": "^6.8.6",
+    "react-table-hoc-fixed-columns": "^1.0.1",
     "react-to-print": "^2.0.0-alpha-2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
