Loading slots in appointment screen, Physician Schedule Setup , Doctors Delete from the existing schedule, Modify the Doctors Schedule and Mark leave

--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -1,5 +1,6 @@
 {
   "baseUrl": "/api/v1",
+  "base-Url": "http://192.168.0.149:3000/api/v1",
   "apiAuth": {
     "user": "devteam",
     "password": "devteam"
