--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rules": {
       "no-eval": 0,
       "no-console": 0,
-      "no-unused-vars": 1
+      "no-unused-vars": 1,
+      "no-script-url": 0
     }
   },
   "author": "ALGAEH Technologies Pvt Ltd",
@@ -62,7 +63,6 @@
     "path": "^0.12.7",
     "pm2": "^3.0.2",
     "rotating-file-stream": "^1.3.6",
-    "sweetalert": "^2.1.0",
     "underscore": "^1.9.1",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
