--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
     "cross-env": "^5.1.4",
+    "html-to-react": "^1.3.3",
     "idb": "^2.1.3",
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
