--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,10 @@
     "idb": "^2.1.3",
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
-    "load-json-file": "^5.0.0",
     "moment": "^2.22.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
+    "rc-progress": "^2.2.6",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.3.2",
