any document save functionality plaese do npm install on client side, gitignore file updated with ignore algaeh_user.json

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,10 @@ typings/
 # production
 /dist
 
+#ignore algaeh_users file
+algaeh_users.json
+2
+ipaddress.txt
 ### VisualStudioCode ###
 .vscode/*
 .vscode/settings.json
