--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/server.js --presets es2015,stage-0\"",
+    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/server.js --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "client": "npm run start --prefix client",
-    "api": "npm run server",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "api": "npm run internal_server",
+    "dev": "concurrently \"npm run internal_server\" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start dist/server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
