--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/server.js --presets es2015,stage-0\"",
+    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
     "client": "npm run start --prefix client",
     "api": "npm run internal_server",
     "dev": "concurrently \"npm run internal_server\" \"npm run client\"",
-    "start": "cross-env pm2 start ecosystem.config.js",
+    "start": "cross-env NODE_ENV=production pm2 start --watch -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
