--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
 # Created by https://www.gitignore.io/api/node,macos,linux,windows,visualstudiocode
-dist/
+dist
 client/build
 ### ignore netbeans ###
 nbproject/
