--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jwt-decode": "^2.2.0",
     "lokijs": "^1.5.5",
     "mathjs": "^5.1.2",
+    "mime": "^2.3.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.0",
@@ -63,6 +64,7 @@
     "path": "^0.12.7",
     "pm2": "^3.0.2",
     "rotating-file-stream": "^1.3.6",
+    "sharp": "^0.21.0",
     "underscore": "^1.9.1",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4",
