--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -1,6 +1,6 @@
 {
-  "baseUrl": "/api/v1",
-  "base-Url": "http://192.168.0.145:3002/api/v1",
+  "base-Url": "/api/v1",
+  "baseUrl": "http://192.168.0.145:3002/api/v1",
   "apiAuth": {
     "user": "devteam",
     "password": "devteam"
