--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
     "moment": "^2.22.1",
+    "moment-hijri": "^2.1.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
