--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -13,5 +13,19 @@
     "BMI": {
       "algaeh_d_formulas_id": 1
     }
+  },
+  "colors": {
+    "bp": {
+      "sys": { "backgroundColor": "#F5AB5C", "borderColor": "#e5c8ac" },
+      "dia": {
+        "backgroundColor": "#ED3833",
+        "borderColor": "#f27674"
+      }
+    },
+    "resp_rate": { "backgroundColor": "#48A36F", "borderColor": "#75b28f" },
+    "temperature": { "backgroundColor": "#FBD67B", "borderColor": "#ffe9b7" },
+    "heart_rate": { "backgroundColor": "#BC353C", "borderColor": "#d17b7f" },
+    "bmi": { "backgroundColor": "#7DBFE1", "borderColor": "#b8def2" },
+    "weight": { "backgroundColor": "#C8A65C", "borderColor": "#b2a079" }
   }
 }
