--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.1.1",
     "react-select": "^1.2.1",
     "react-table": "^6.8.6",
     "react-table-hoc-fixed-columns": "^1.0.1",
