--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js --presets es2015,stage-0\"",
     "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist --presets es2015,stage-0",
     "client": "npm run start --prefix client",
     "document_management": "npm run api --prefix DocumentManagement",
     "api": "npm run internal_server",
@@ -14,7 +15,7 @@
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
-    "pm2": "concurrently  cross-env NODE_ENV=development  pm2 start --watch --max-memory-restart 850M \"babel-node src/internal_server.js --presets es2015,stage-0\"  \"npm run client\"",
+    "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start --watch --max-memory-restart 850M \"babel-node src/internal_server.js --presets es2015,stage-0\"  \"npm run client\"",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
   },
   "eslintConfig": {
@@ -55,7 +56,7 @@
     "mime": "^2.3.1",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
-    "morgan": "^1.9.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "node-linq": "0.0.5",
