--- a/DocumentManagement/package.json
+++ b/DocumentManagement/package.json
@@ -4,8 +4,8 @@
   "description": "Algaeh document management",
   "main": "dist",
   "scripts": {
-    "document_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/document_management_server.js --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
+    "document_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/document_management_server.js \"",
+    "build": "babel src -s -D -d dist ",
     "api": "npm run document_server",
     "lint": "eslint src && eslint test",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +19,7 @@
       "node": true
     },
     "rules": {
-      "no-eval": true,
+      "no-eval": 0,
       "no-console": 0,
       "no-unused-vars": 1,
       "no-script-url": 0
@@ -43,8 +43,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "9.0.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-eslint": "^8.2.3",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "eslint": "^4.19.1",
     "nodemon": "^1.17.3"
