--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js --presets es2015,stage-0\"",
-    "build": "babel src -s -D -d dist --presets es2015,stage-0",
-    "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist --presets es2015,stage-0",
+    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js \"",
+    "build": "babel src -s -D -d dist ",
+    "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
     "document_management": "npm run api --prefix DocumentManagement",
     "api": "npm run internal_server",
@@ -15,7 +15,7 @@
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
-    "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start --watch --max-memory-restart 850M \"babel-node src/internal_server.js --presets es2015,stage-0\"  \"npm run client\"",
+    "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start --watch --max-memory-restart 850M \"babel-node src/internal_server.js \"  \"npm run client\"",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
   },
   "eslintConfig": {
@@ -77,7 +77,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
