--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -7,7 +7,7 @@
   },
   "formators": {
     "date": "YYYY-MM-DD",
-    "time": "HH:MM"
+    "time": "HH:mm"
   },
   "algaeh_d_formulas": {
     "BMI": {
