--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "pm2": "^3.0.2",
+    "request": "^2.88.0",
     "rotating-file-stream": "^1.3.6",
     "sharp": "^0.21.0",
     "underscore": "^1.9.1",
