--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios-cancel": "^0.2.2",
     "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
+    "cleave.js": "^1.4.4",
     "cross-env": "^5.1.4",
     "html-to-react": "^1.3.3",
     "idb": "^2.1.3",
@@ -24,7 +25,7 @@
     "react-dropzone": "^4.2.9",
     "react-froala-wysiwyg": "^2.8.4",
     "react-modal": "^3.4.5",
-    "react-number-format": "^3.3.4",
+    "react-number-format": "^3.6.2",
     "react-quill": "^1.3.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
