--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^1.2.1",
     "@material-ui/icons": "^1.1.0",
+    "agentkeepalive": "^4.0.0",
     "axios": "^0.18.0",
     "axios-cancel": "^0.2.2",
     "bootstrap": "^4.1.0",
