--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Hospital Information Management System",
   "main": "dist",
   "scripts": {
-    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js \"",
+    "internal_server": "cross-env NODE_ENV=development nodemon -w src --exec \"babel-node src/internal_server.js  \"",
     "build": "babel src -s -D -d dist ",
     "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
     "document_management": "npm run api --prefix DocumentManagement",
     "api": "npm run internal_server",
-    "dev": "concurrently --kill-others \"npm run document_management\" \"npm run internal_server\" \"npm run client\"",
+    "dev": "concurrently --kill-others \"npm run document_management\" \"npm run internal_server \" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start --watch -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
@@ -39,6 +39,7 @@
     "aws-sdk": "^2.247.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.3",
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
