--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "document_management": "npm run api --prefix DocumentManagement",
     "api": "npm run internal_server",
     "dev": "concurrently --kill-others \"npm run document_management\" \"npm run internal_server \" \"npm run client\"",
-    "start": "cross-env NODE_ENV=production pm2 start --watch -i 4 dist/internal_server.js",
+    "start": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
     "lint": "eslint src && eslint test",
-    "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start --watch --max-memory-restart 850M \"babel-node src/internal_server.js \"  \"npm run client\"",
+    "pm2": "concurrently --kill-others  cross-env NODE_ENV=development  pm2 start  --max-memory-restart 850M \"babel-node src/internal_server.js \"  \"npm run client\"",
     "test": "export NODE_ENV=test npm run build && mocha --require babel-core/register --timeout=10000000"
   },
   "eslintConfig": {
