--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-froala-wysiwyg": "^2.8.4",
+    "react-image-cropper": "^1.3.0",
     "react-modal": "^3.4.5",
     "react-number-format": "^3.6.2",
     "react-quill": "^1.3.1",
@@ -36,6 +37,7 @@
     "react-table": "^6.8.6",
     "react-table-hoc-fixed-columns": "^1.0.1",
     "react-to-print": "^2.0.0-alpha-2",
+    "react-webcam": "^1.0.4",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
