--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "cross-env": "^5.1.4",
     "html-to-react": "^1.3.3",
     "idb": "^2.1.3",
+    "js2xmlparser": "^3.0.0",
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
     "moment": "^2.22.1",
