--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "babel src -s -D -d dist ",
     "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
-    "document_management": "npm run api --prefix DocumentManagement",
     "api": "npm run internal_server",
-    "dev": "concurrently --kill-others \"npm run document_management\" \"npm run internal_server \" \"npm run client\"",
+    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"",
     "start": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
