--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "ALGAEH Technologies Pvt Ltd",
   "license": "ISC",
   "dependencies": {
+    "algaeh-mysql": "^1.1.6",
     "aws-sdk": "^2.247.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
