--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -27,7 +27,7 @@
     }
   },
   "dependencies": {
-    "algaeh-mysql": "^1.1.6",
+    "algaeh-mysql": "^1.1.9",
     "body-parser": "^1.18.2",
     "compression": "^1.7.3",
     "concurrently": "^3.5.1",
@@ -35,6 +35,7 @@
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
     "moment": "^2.22.1",
+    "node-linq": "0.0.5",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4"
   },
