--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "hijri-date": "^0.2.2",
     "jsonwebtoken": "^8.2.1",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "lokijs": "^1.5.5",
     "mathjs": "^5.1.2",
     "mime": "^2.3.1",
