--- a/DocumentManagement/package.json
+++ b/DocumentManagement/package.json
@@ -5,10 +5,11 @@
   "main": "dist",
   "scripts": {
     "document_server": "cross-env  PORT=3006 NODE_ENV=development nodemon -w src --exec \"babel-node src/document_management_server.js \"",
-    "build": "babel src -s -D -d dist ",
+    "prod_build": "babel src -s -D -d dist ",
     "dev": "npm run document_server",
     "lint": "eslint src && eslint test",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pm2": "concurrently --kill-others  cross-env NODE_ENV=production  pm2 start  --max-memory-restart 850M \"babel-node src/document_management_server.js \""
   },
   "eslintConfig": {
     "parserOptions": {
