Loan Application and Loan Request Functionality

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "build": "babel src -s -D -d dist ",
     "build_document_management": "babel DocumentManagement/src -s -D -d DocumentManagement/dist ",
     "client": "npm run start --prefix client",
+    "hr_server": "npm run hr_server --prefix HrManagement",
     "api": "npm run internal_server",
-    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"",
+    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\" \"npm run hr_server\"",
     "start": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
