--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/node,macos,linux,windows,visualstudiocode
 dist
 client/build
+apiBuild/
 ### ignore netbeans ###
 nbproject/
 # ignore keys->dev
