--- a/AlgaehUtilities/package.json
+++ b/AlgaehUtilities/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algaeh-Cryptography",
+  "name": "algaeh-utilities",
   "version": "1.0.0",
   "description": "cryptography algaeh",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cryptr": "^4.0.2",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "winston": "^3.1.0",
