--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -3,19 +3,19 @@
   "routersAndPorts": {
     "default": {
       "port": 3000,
-      "url": "http://localhost:"
+      "url": "http://192.168.0.145:"
     },
     "finance": {
       "port": 3007,
-      "url": "http://localhost:"
+      "url": "http://192.168.0.145:"
     },
     "documentManagement": {
       "port": 3006,
-      "url": "http://localhost:"
+      "url": "http://192.168.0.145:"
     },
     "hrManagement": {
       "port": 3004,
-      "url": "http://localhost:"
+      "url": "http://192.168.0.145:"
     }
   },
   "apiAuth": {
