Leave Master UI Add Functionality

--- a/AlgaehUtilities/package.json
+++ b/AlgaehUtilities/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "algaeh-Cryptography",
+  "name": "algaeh-utilities",
   "version": "1.0.0",
   "description": "cryptography algaeh",
   "main": "index.js",
