--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "cross-env PORT=1414 npm-run-all -p watch-css start-js"
   },
   "eslintConfig": {
     "rules": {
