--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -4,13 +4,13 @@
   "description": "Algaeh HR Management services",
   "main": "dist",
   "scripts": {
-    "hr_server": "cross-env PORT=4004  NODE_ENV=development nodemon -w  src --exec \"babel-node src/hr_server.js \"",
-    "build": "babel src -s -D -d  dist/",
+    "hr_server": "cross-env PORT=3004 NODE_ENV=development nodemon -w src --exec \"babel-node src/hr_server.js \"",
+    "build": "babel src -s -D -d dist ",
     "dev": "npm run hr_server",
     "api": "npm run hr_server",
     "lint": "eslint src && eslint test",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env PORT=4004 NODE_ENV=production pm2 start  -i 1 dist/hr_server1.js"
+    "start": "cross-env PORT=4004 NODE_ENV=production pm2 start  -i 1 hr_server.js"
   },
   "eslintConfig": {
     "parserOptions": {
