--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: "3"
 services:
   app:
-    container_name: docker-hims
+    container_name: docker-hims-erp
     restart: always
     build: .
+    volumes:
+      - ./:/apps
     ports:
-      - "80:1313"
+      - "3004:3004"
+      - "3000:3000"
+      - "3006:3006"
