--- a/AlgaehUtilities/package.json
+++ b/AlgaehUtilities/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cryptr": "4.0.0",
+    "cryptr": "^4.0.0",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "winston": "^3.1.0",
