--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "hr_server": "npm run dev --prefix HrManagement",
     "doc_mgmt": "npm run document_server --prefix DocumentManagement",
     "api": "concurrently \"npm run internal_server\"  \"npm run hr_server\"",
-    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\" \"npm run hr_server\" \"npm run doc_mgmt\"",
+    "dev": "concurrently --kill-others  \"npm run internal_server \" \"npm run client\"  \"npm run doc_mgmt\"",
     "start12333": "cross-env NODE_ENV=production pm2 start  -i 4 dist/internal_server.js",
     "npminstall": "npm install && npm install --prefix client",
     "prod_build": "npm run build --prefix client && npm run build",
