--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.22.1",
     "morgan": "^1.9.1",
+    "mssql": "^4.3.0",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "node-linq": "0.0.5",
