--- a/AlgaehUtilities/package.json
+++ b/AlgaehUtilities/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.3",
     "cryptr": "^4.0.0",
+    "fibers": "^3.1.1",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "winston": "^3.1.0",
