--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -35,9 +35,9 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
+    "fibers": "^3.1.1",
     "moment": "^2.22.1",
     "node-linq": "0.0.5",
-    "sync": "^0.2.5",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4"
   },
