--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "js2xmlparser": "^3.0.0",
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.1",
     "moment-hijri": "^2.1.1",
     "node-sass-chokidar": "^1.3.4",
