--- a/client/package.json
+++ b/client/package.json
@@ -7,17 +7,14 @@
     "agentkeepalive": "^4.0.0",
     "axios": "^0.18.0",
     "axios-cancel": "^0.2.2",
-    "bootstrap": "^4.1.0",
     "chart.js": "^2.7.2",
     "cleave.js": "^1.4.4",
     "cross-env": "^5.1.4",
-    "idb": "^2.1.3",
     "js2xmlparser": "^3.0.0",
     "jsbarcode": "^3.9.0",
     "linq": "^3.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.1",
-    "moment-hijri": "^2.1.1",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
@@ -38,6 +35,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.84.0",
     "sweetalert2": "^7.28.4"
   },
   "scripts": {
