--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "npm-run-all": "^4.1.3",
     "react": "^16.3.2",
     "react-chartjs-2": "^2.7.2",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.3.2",
     "react-dropzone": "^4.2.9",
     "react-image-cropper": "^1.3.0",
