Changes in Leave and Self Service Bug Fixes

--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -16,6 +16,10 @@
     "hrManagement": {
       "port": 3004,
       "url": ""
+    },
+    "masterSettings": {
+      "port": 3003,
+      "url": ""
     }
   },
   "apiAuth": {
