--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
+    "extend": "^3.0.2",
     "moment": "^2.22.1",
     "node-linq": "0.0.5",
     "winston": "^2.4.2",
