--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -5,6 +5,10 @@
       "port": 3000,
       "url": ""
     },
+    "frontDesk": {
+      "port": 3000,
+      "url": ""
+    },
     "finance": {
       "port": 3007,
       "url": ""
