changed module name to algaeh-*

--- a/FrontDesk/package.json
+++ b/FrontDesk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front_desk",
+  "name": "algaeh-front-desk",
   "version": "1.0.0",
   "description": "Algaeh Front Desk Module",
   "main": "dist",
