--- a/MasterSettings/package.json
+++ b/MasterSettings/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "master_settings",
+  "name": "algaeh-master-settings",
   "version": "1.0.0",
   "description": "Algaeh Master Settings Module",
   "main": "dist",
