--- a/Billing/package.json
+++ b/Billing/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
+    "node-linq": "0.0.5",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4"
   },
