--- a/Billing/package.json
+++ b/Billing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "billing",
+  "name": "algaeh-billing",
   "version": "1.0.0",
   "description": "Algaeh Billing Module",
   "main": "dist",
