OP Billing save and get moved to micro service

--- a/client/src/utils/config.json
+++ b/client/src/utils/config.json
@@ -28,6 +28,10 @@
     "masterSettings": {
       "port": 3003,
       "url": ""
+    },
+    "billing": {
+      "port": 3014,
+      "url": ""
     }
   },
   "apiAuth": {
