--- a/Radiology/package.json
+++ b/Radiology/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radiology",
+  "name": "algaeh-radiology",
   "version": "1.0.0",
   "description": "Algaeh Laboratory Information Management System",
   "main": "dist",
@@ -36,7 +36,8 @@
     "cross-env": "^5.1.4",
     "express": "^4.16.3",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4"
+    "winston-daily-rotate-file": "^3.1.4",
+    "node-linq": "0.0.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
