--- a/Billing/package.json
+++ b/Billing/package.json
@@ -22,7 +22,8 @@
     "express": "^4.16.3",
     "node-linq": "0.0.5",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4"
+    "winston-daily-rotate-file": "^3.1.4",
+    "mathjs": "^5.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
