--- a/HrManagement/package.json
+++ b/HrManagement/package.json
@@ -38,6 +38,7 @@
     "extend": "^3.0.2",
     "moment": "^2.22.1",
     "node-linq": "0.0.5",
+    "sync": "^0.2.5",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4"
   },
