Inventory master moved to micro services

--- a/Inventory/package.json
+++ b/Inventory/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inventory",
+  "name": "algaeh-inventory",
   "version": "1.0.0",
   "description": "Algaeh Inventory Module",
   "main": "dist",
