--- a/Billing/package.json
+++ b/Billing/package.json
@@ -19,11 +19,13 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
+    "cryptr": "^4.0.0",
     "express": "^4.16.3",
+    "extend": "^3.0.2",
+    "mathjs": "^5.1.2",
     "node-linq": "0.0.5",
     "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4",
-    "mathjs": "^5.1.2"
+    "winston-daily-rotate-file": "^3.1.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
