--- a/ClinicalDesk/package.json
+++ b/ClinicalDesk/package.json
@@ -34,6 +34,7 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
+    "cryptr": "^4.0.0",
     "express": "^4.16.3",
     "moment": "^2.22.1",
     "node-linq": "0.0.5",
