--- a/General/package.json
+++ b/General/package.json
@@ -19,6 +19,7 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
+    "cryptr": "^4.0.0",
     "express": "^4.16.3",
     "winston": "^2.4.2",
     "winston-daily-rotate-file": "^3.1.4"
