--- a/Laboratory/package.json
+++ b/Laboratory/package.json
@@ -34,11 +34,12 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "cross-env": "^5.1.4",
+    "cryptr": "^4.0.0",
     "express": "^4.16.3",
-    "winston": "^2.4.2",
-    "winston-daily-rotate-file": "^3.1.4",
     "node-linq": "0.0.5",
-    "node-string-pad": "0.0.4"
+    "node-string-pad": "0.0.4",
+    "winston": "^2.4.2",
+    "winston-daily-rotate-file": "^3.1.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
