--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
     "chart.js": "^2.7.2",
     "cleave.js": "^1.4.4",
     "cross-env": "^5.1.4",
+    "html2canvas": "^1.0.0-alpha.12",
     "js2xmlparser": "^3.0.0",
     "jsbarcode": "^3.9.0",
+    "jspdf": "^1.5.3",
     "linq": "^3.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.1",
